--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <nav class="Nav">
     <div class="globalNav">
       <ul>
-        <li><a href="#"><img src="home.png"></a></li>
+        <li><a href="#">ホーム</a></li>
         <li><a href="#">メンズ</a></li>
         <li><a href="#">レディース</a></li>
         <li><a href="#">キッズ</a></li>
@@ -59,15 +59,15 @@
           <p>36アイテム中（1〜3）を表示</p>
         </div>
         <div class="product">
-          <img src="img/kids_kodomofuku_shirt_girl.png">
+          <img src="kids_kodomofuku_shirt_girl.png">
           <p class="text-contents">Ｔシャツ（女の子）<br><span class="price">価格 ￥1,500(＋税)<span></p>
         </div>
         <div class="product">
-          <img src="img/kodomofuku_boy.png">
+          <img src="kodomofuku_boy.png">
           <p class="text-contents">セーター（男の子）<br><span class="price">価格 ￥1,500(＋税)<span></p>
         </div>
         <div class="product">
-          <img src="img/kodomofuku_girl.png">
+          <img src="kodomofuku_girl.png">
           <p class="text-contents">セーター（女の子）<br><span class="price">価格 ￥1,800(＋税)<span></p>
         </div>
         
